icp-backend/ingress/ingress.yaml
##################################################################################################
# Ingress Routing
##################################################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: test-ingress
 annotations:
  ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - 
  http:
    paths:
    - path: /banking
      backend:
        serviceName: foo
        servicePort: 80
